<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">


    <TextView style="@style/title" />

    <ImageView
        style="@style/image"
        android:src="@drawable/logo" />

    <TextView
        style="@style/descriptionTextView"
        android:layout_weight="5"
        android:padding="@dimen/basic"
        android:text="@string/description" />

    <TextView
        style="@style/descriptionTextView"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/basic"
        android:text="@string/contact" />

    <TextView
        style="@style/contactTextView"
        android:drawableLeft="@drawable/phone"
        android:text="@string/phone" />


    <TextView
        style="@style/contactTextView"
        android:drawableLeft="@drawable/http"
        android:text="@string/site" />

    <TextView
        style="@style/contactTextView"
        android:layout_marginBottom="@dimen/basic"
        android:drawableLeft="@drawable/address"
        android:text="@string/address" />

</LinearLayout>